updated thesis and slides

--- a/thesis/example.bib
+++ b/thesis/example.bib
@@ -441,3 +441,29 @@ series = {SODA ’15}
   note  =  {\url{https://www.math.upenn.edu/~pemantle/papers/snell.pdf}},
   note = {Accessed: 10-6-2020},
 }
+
+@misc{ttao,
+  title = {Matrix identities as derivatives of determinant identities},
+  author = {Terrance Tao},
+  note  =  {\url{https://terrytao.wordpress.com/2013/01/13/matrix-identities-as-derivatives-of-determinant-identities/}},
+  note = {Accessed: 10-6-2020},
+}
+
+@article{DBLP:journals/corr/abs-2004-12739,
+  author    = {Samir Datta and
+               Pankaj Kumar and
+               Anish Mukherjee and
+               Anuj Tawari and
+               Nils Vortmeier and
+               Thomas Zeume},
+  title     = {Dynamic complexity of Reachability: How many changes can we handle?},
+  journal   = {CoRR},
+  volume    = {abs/2004.12739},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2004.12739},
+  archivePrefix = {arXiv},
+  eprint    = {2004.12739},
+  timestamp = {Wed, 29 Apr 2020 10:17:11 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2004-12739.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
