--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -122,7 +122,7 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 \university{\href{http://www.cmi.ac.in}{Chennai Mathematical Institute}} % Your university's name and URL, this is used in the title page and abstract, print it elsewhere with \univname
 \department{\href{https://www.cmi.ac.in//people/academic.php}{Computer Science at CMI}} % Your department's name and URL, this is used in the title page and abstract, print it elsewhere with \deptname
 \group{\href{http://researchgroup.university.com}{Research Group Name}} % Your research group's name and URL, this is used in the title page, print it elsewhere with \groupname
-\faculty{\href{http://faculty.university.com}{Faculty Name}} % Your faculty's name and URL, this is used in the title page and abstract, print it elsewhere with \facname
+\faculty{\href{https://www.cmi.ac.in/~sdatta/}{Samir Datta}} % Your faculty's name and URL, this is used in the title page and abstract, print it elsewhere with \facname
 
 \AtBeginDocument{
 \hypersetup{pdftitle=\ttitle} % Set the PDF's title to your title
@@ -218,7 +218,7 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots. I see
+We study the problem of sampling a spanning tree of a graph with uniform probability. We survey some of the existing algorithms in the literature and explain a recent paper \citet{harvey2016generating} in detail.  Our initial motivation was to study the dynamic complexity of uniformly sampling spanning trees.
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
@@ -227,7 +227,7 @@ The Thesis Abstract is written here (and usually kept to just this page). The pa
 
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
-The acknowledgments and the people to thank go here, don't forget to include your project advisor\ldots
+I would like to thank my advisor Prof. Samir Datta for his patience and guidance in advicing me . I would also like to thank my family members and friends without whose support this would have not been possible. I would also like to thank Kishlaya for the disscussions on random walks and spectral graph theory. 
 \end{acknowledgements}
 
 %----------------------------------------------------------------------------------------
@@ -238,7 +238,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 
 \listoffigures % Prints the list of figures
 
-\listoftables % Prints the list of tables
+% \listoftables % Prints the list of tables
 
 %----------------------------------------------------------------------------------------
 %	ABBREVIATIONS
@@ -299,7 +299,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 
 \input{Chapters/Chapter1.tex}
 \input{Chapters/Chapter2.tex} 
-% \input{Chapters/Chapter3.tex} 
+\input{Chapters/Chapter3.tex} 
 \input{Chapters/Chapter4.tex}
 % \input{Chapters/Chapter5.tex} 
 \input{Chapters/Chapter6.tex}
