--- a/presentation_1.tex
+++ b/presentation_1.tex
@@ -90,7 +90,7 @@
 \usepackage{circuitikz}
 \usepackage {xcolor}
 \usepackage{wasysym}
-\usepackage[lined,linesnumbered]{algorithm2e}
+\usepackage[lined]{algorithm2e}
 \usepackage{bibentry}
 \usetikzlibrary{graphs,graphs.standard}
 \setbeamercovered{transparent=8}
@@ -119,7 +119,6 @@ Chennai Mathematical Institute \\ % Your institution for the title page
 
 \begin{frame}
 \frametitle{Overview} % Table of contents slide, comment this block out to remove it
-
 \tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
 \end{frame}
 
@@ -139,6 +138,7 @@ Chennai Mathematical Institute \\ % Your institution for the title page
 
  Given an undirected connected graph $G = (V, E)$, sample a spanning tree $T$ with probability $\frac{1}{|\mathcal{T}|}$ where $\mathcal{T}$ denotes the set of all spanning trees of $G$. 
  
+ We are interested in sampling a tree 
 %  
 % \end{block}
 
@@ -148,13 +148,11 @@ Chennai Mathematical Institute \\ % Your institution for the title page
 
 \end{frame}
 
-\subsection{Applications}
-
 \begin{frame}
 
 \frametitle{Applications}
  
-Sampling spanning trees pops up in surprising problems in TCS such as 
+Sampling spanning trees happens to be a primitive used in various problems in TCS such as 
 
 \begin{itemize}
 \pause
@@ -162,7 +160,7 @@ Sampling spanning trees pops up in surprising problems in TCS such as
 \pause
 \item Approximation algorithms for the travelling salesman problem(\cite{6108216}, \cite{doi:10.1287/opre.2017.1603})
 \pause
-\item Graph Sparsification (\cite{DBLP:journals/corr/abs-1005-0265}, \cite{dolev2016random})
+\item Graph Sparcification (\cite{DBLP:journals/corr/abs-1005-0265}, \cite{dolev2016random})
 \pause
 \item Analysis of network reliability (\cite{10.5555/535891},\cite{doi:10.1002/net.3230200303}, \cite{colbourn1988estimating})
 \pause
@@ -180,74 +178,203 @@ Sampling spanning trees pops up in surprising problems in TCS such as
 
 %------------------------------------------------
 
-\subsection{A bird's eye view of existing algorithms}
+\subsection{Algorithms}
 \begin{frame}
  \frametitle{Proposed Algorithms}
  
- In this talk we would review some of the algorithms proposed for this problem and get into details of \cite{harvey2016generating}  
- 
- \leavevmode\hphantom{ }
- 
- \begin{itemize}
- \pause
-  \item \textbf{Random Walk Based} - Simulate variants of random walk on the input graph
-  \pause
-  \item \textbf{Determinant Based} - Based on Kirchoff Matrix Tree theorem and involve computing determinants of the laplacian matrix
-  \pause
-  \item  \textbf{Approximation Algorithms}
- \end{itemize}
-
- 
+ In this talk we would review some of the algorithms proposed for this problem and get into details of \cite{harvey2016generating}d
  
 \end{frame}
 
-\section{Random Walk Based Algorithms}
-
-\subsection{Aldous-Broder Algorithm}
 
 \begin{frame}
-\frametitle{Aldous-Broder Algorithm}
+\centering
+ \begin{tikzpicture}
+  \graph { subgraph K_n [n=5,clockwise,radius=2cm] };
+\end{tikzpicture}
+\end{frame}
 
- Andrei Broder and David Aldous independently invented the following algorithm
- 
- 
+
+\begin{frame}
+\frametitle{Naive algorithm using effective resistance}
+
 
 \begin{figure}
-% \centering
-\scalebox{0.7}{
-\begin{algorithm}[H]
- \KwIn{$G = (V,E)$}
- \KwOut{A random spanning tree}
- 
- Choose a starting vertex $s$ arbitrarily
- 
- $T_V \leftarrow \{s\}, T_E \leftarrow \emptyset$
- 
- \While{$|T_V| < |V$} {
- 
-    $next =_{u.a.r} N(s)$
-    
-    \If{$next \not\in T_V$} {
-        $T_V = T_V \cup \{next\}$
-        
-        $T_E = T_E \cup \{(s, next)\}$
-    }
-    
-    $s = next$
- 
- }
- 
- \KwRet{$T = (T_V, T_E)$}
 
+\begin{algorithm}[H]
+ \KwIn{$G = (V,E) \  \text{and} \  L_G^+$}
+ \KwOut{Set of edges corresponding to a random spanning tree}
  
-  \caption{Aldous-Broder Algorithm}
-\end{algorithm}
+ \For{$e = (u,v) \in E$ }{
+    $R_e^{\text{eff}} = (\chi_u - \chi_v)^T \ L_G^+ \ (\chi_u - \chi_v)$\;
+  \eIf{$(X \sim \text{Bernoulli}(R_e^{\text{eff}})) = 1$} {
+   Add edge $e$ to the spanning tree\;
+   $G = G / e$\;
+   }{
+   $G = G \setminus e$ \;
+  }
+  Update $ L_G^+ $ \;
  }
-\end{figure} 
+ \caption{Sampling uniform spanning tree using chain rule}
+\end{algorithm}
+ 
+\end{figure}
+
+
+\end{frame}
+
+\begin{frame}
+\begin{figure}
+
+\centering
+ \includegraphics[scale=0.5]{alg-tree}
+ 
+\end{figure}
 \end{frame}
 
 
+%------------------------------------------------
+
 \begin{frame}
+\frametitle{Blocks of Highlighted Text}
+\pause
+\begin{block}{Block 1}
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lectus nisl, ultricies in feugiat rutrum, porttitor sit amet augue. Aliquam ut tortor mauris. Sed volutpat ante purus, quis accumsan dolor.
+\end{block}
+\pause
+\begin{block}{Block 2}
+Pellentesque sed tellus purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum quis magna at risus dictum tempor eu vitae velit.
+\end{block}
+\pause
+\begin{block}{Block 3}
+Suspendisse tincidunt sagittis gravida. Curabitur condimentum, enim sed venenatis rutrum, ipsum neque consectetur orci, sed blandit justo nisi ac lacus.
+\end{block}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Multiple Columns}
+\begin{columns}[c] % The "c" option specifies centered vertical alignment while the "t" option is used for top vertical alignment
+
+\column{.45\textwidth} % Left column and width
+\textbf{Heading}
+\begin{enumerate}
+\item Statement
+\item Explanation
+\item Example
+\end{enumerate}
+
+\column{.5\textwidth} % Right column and width
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lectus nisl, ultricies in feugiat rutrum, porttitor sit amet augue. Aliquam ut tortor mauris. Sed volutpat ante purus, quis accumsan dolor.
+
+\end{columns}
+\end{frame}
+
+%------------------------------------------------
+\section{Second Section}
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Table}
+\begin{table}
+\begin{tabular}{l l l}
+\toprule
+\textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2}\\
+\midrule
+Treatment 1 & 0.0003262 & 0.562 \\
+Treatment 2 & 0.0015681 & 0.910 \\
+Treatment 3 & 0.0009271 & 0.296 \\
+\bottomrule
+\end{tabular}
+\caption{Table caption}
+\end{table}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Theorem}
+\begin{theorem}[Mass--energy equivalence]
+$E = mc^2$
+\end{theorem}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}[fragile] % Need to use the fragile option when verbatim is used in the slide
+\frametitle{Verbatim}
+\begin{example}[Theorem Slide Code]
+\begin{verbatim}
+\begin{frame}
+\frametitle{Theorem}
+\begin{theorem}[Mass--energy equivalence]
+$E = mc^2$
+\end{theorem}
+\end{frame}\end{verbatim}
+\end{example}
+\end{frame}
+
+%------------------------------------------------
+\definecolor {processblue}{cmyk}{0,0,0,0}
+
+\begin{frame}[t]
+\frametitle{Figure}
+
+\begin{figure}[h!]
+\centering
+
+\begin{subfigure}{.5\textwidth}
+  \centering
+%   \includegraphics[width=.4\linewidth]{image1}
+
+\begin {tikzpicture}[auto ,node distance =4 cm and 5cm ,on grid ,
+semithick ,
+state/.style ={ circle ,top color =white , bottom color = processblue!20 ,
+draw,black , text=black , minimum width =1 cm}]
+\node[state] (C){$A$};
+\node[state] (A) [above =of C] {$D$};
+\node[state] (B) [above right =of C] {$C$};
+\node[state] (D) [right =of C] {$B$};
+\path (C) edge node[below] {$1$} (D);
+\path (B) edge node[right] {$5$} (D);
+\path (A) edge node[above] {$10$} (B);
+\path (C) edge node[left] {$4$} (A);
+\end{tikzpicture}
+
+  \caption{The original graph $G$}
+  \label{fig:sub1}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+%   \includegraphics[width=.4\linewidth]{image1}
+
+\onslide<2->{
+\begin{circuitikz}[american]
+ \put(0,0){0};
+ \draw (0, -2) to[short, -*, i=$1 A$] (0,0) node[left]{$A$};
+ \draw (0,0) to[R, l=\mbox{$1 \  \Omega$}] (3,0) node[right]{$B$};
+ \draw (0,0) to[R, l=$0.25 \ \Omega$] (0,3) node[left]{$D$};
+ \draw (3,0) to[R, l=\mbox{$0.2 \ \Omega$}] (3,3) node[right]{$C$};
+ % this works, but it has wrong spacing
+ \draw (0,3) to[R, l=$0.1 \ \Omega$] (3,3);
+ \draw (3, 0) to[short, *-, i=$1 A$] (3,-2);
+ \draw (3, -2) to[isource, l=$1 A$] (0, -2);
+ \end{circuitikz}
+
+\caption{The electric network version of $G$}
+}
+\label{fig:sub2}
+\end{subfigure}
+\caption{An example of a graph and it's corresponding electric network}
+\label{fig:test}
+\end{figure}
+
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}[fragile] % Need to use the fragile option when verbatim is used in the slide
 \frametitle{Aldous-Broder Algorithm example}
 
 \only<1>{
@@ -399,98 +526,6 @@ draw,black , text=black , minimum width =1 cm}]
 
 
 \end{frame}
-
-
-
-\begin{frame}
-
-\pause
-\frametitle{Running Time}
-
-\textbf{Cover Time}
-
-$cov_G(u) := $ The expected number of steps for a random walk starting at $u$ to visit all the vertices in $G$
-
-\leavevmode\hphantom{ }
-
-\pause
-\textbf{Cover Time of $G$} 
-
-$cov_G := \max_{u \in V_G} cov_G(u)$ 
-
- \leavevmode\hphantom{ }
- 
- \pause
- It is known that $cov_G = \mathcal{O}(|V|\ |E|) = \mathcal{O}(|V|^3)$
-
- 
-
-% \pause
-% \centering
-%  \begin{tikzpicture}
-%   \graph { subgraph K_n [n=5,clockwise,radius=2cm] };
-% \end{tikzpicture}
-
-\end{frame}
-
-\subsection{Wilson's Algorithm}
-
-\begin{frame}
- \frametitle{Wilson's Algorithm}
- 
- In 1996 Wilson proposed a variant of random walk called loop erased random walk .
-\begin{figure}
-\scalebox{0.7}{
-\begin{algorithm}[H]
-
- \KwIn{$G = (V,E) \  \text{and} \  \text{root } r \in V$}
- \KwOut{Parent pointer array called $next$}
-
- $\text{inTree}[i] \leftarrow False, \; \forall \ i \neq r$
- 
- $\text{inTree}[r] \leftarrow True$
- 
- $\text{next}[r] \leftarrow \text{NULL}$
- 
- \For{$i \leftarrow 1$ to $n$ }{
-    
-    $u = i$
-    
-    \While{$\neg \text{inTree}[u]$} {
-    
-        $\text{next}[u] =_{u.a.r} N(u)$
-        
-        $u = \text{next}[u]$
-    
-    }
-    
-    $u = i$
-    
-    \While{$\neg \text{inTree}[u]$} {
-    
-        $\text{inTree}[u] = True$
-        
-        $u = \text{next}[u]$
-    
-    }
-    
-    
- }
- \KwRet{next}
- 
- \caption{Wilson's Algorithm}
- 
-\end{algorithm}
- 
- }
- 
-\end{figure}
-
- 
- 
-\end{frame}
-
-
 
 \begin{frame}
  \frametitle{Wilson's algorithm example}
@@ -876,180 +911,6 @@ draw,black , text=black , minimum width =1 cm}]
 
 \end{frame}
 
-\section{Determinant Based Methods}
-
-\begin{frame}
- \frametitle{Determinant based algorithm}
- 
- 
- 
-\end{frame}
-
-
-
-\begin{frame}
-\frametitle{Naive algorithm using effective resistance}
-
-\begin{figure}
-\scalebox{0.7}{
-
-
-\begin{algorithm}[H]
- \KwIn{$G = (V,E) \  \text{and} \  L_G^+$}
- \KwOut{Set of edges corresponding to a random spanning tree}
- 
- \For{$e = (u,v) \in E$ }{
-    $R_e^{\text{eff}} = (\chi_u - \chi_v)^T \ L_G^+ \ (\chi_u - \chi_v)$\;
-  \eIf{$(X \sim \text{Bernoulli}(R_e^{\text{eff}})) = 1$} {
-   Add edge $e$ to the spanning tree\;
-   $G = G / e$\;
-   }{
-   $G = G \setminus e$ \;
-  }
-  Update $ L_G^+ $ \;
- }
- \caption{Sampling uniform spanning tree using chain rule}
-\end{algorithm}
- 
-
-}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\begin{figure}
-
-\centering
- \includegraphics[scale=0.5]{alg-tree}
- 
-\end{figure}
-\end{frame}
-
-
-%------------------------------------------------
-
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{Multiple Columns}
-\begin{columns}[c] % The "c" option specifies centered vertical alignment while the "t" option is used for top vertical alignment
-
-\column{.45\textwidth} % Left column and width
-\textbf{Heading}
-\begin{enumerate}
-\item Statement
-\item Explanation
-\item Example
-\end{enumerate}
-
-\column{.5\textwidth} % Right column and width
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lectus nisl, ultricies in feugiat rutrum, porttitor sit amet augue. Aliquam ut tortor mauris. Sed volutpat ante purus, quis accumsan dolor.
-
-\end{columns}
-\end{frame}
-
-%------------------------------------------------
-\section{Second Section}
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{Table}
-\begin{table}
-\begin{tabular}{l l l}
-\toprule
-\textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2}\\
-\midrule
-Treatment 1 & 0.0003262 & 0.562 \\
-Treatment 2 & 0.0015681 & 0.910 \\
-Treatment 3 & 0.0009271 & 0.296 \\
-\bottomrule
-\end{tabular}
-\caption{Table caption}
-\end{table}
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{Theorem}
-\begin{theorem}[Mass--energy equivalence]
-$E = mc^2$
-\end{theorem}
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}[fragile] % Need to use the fragile option when verbatim is used in the slide
-\frametitle{Verbatim}
-\begin{example}[Theorem Slide Code]
-\begin{verbatim}
-\begin{frame}
-\frametitle{Theorem}
-\begin{theorem}[Mass--energy equivalence]
-$E = mc^2$
-\end{theorem}
-\end{frame}\end{verbatim}
-\end{example}
-\end{frame}
-
-%------------------------------------------------
-\definecolor {processblue}{cmyk}{0,0,0,0}
-
-\begin{frame}[t]
-\frametitle{Figure}
-
-\begin{figure}[h!]
-\centering
-
-\begin{subfigure}{.5\textwidth}
-  \centering
-%   \includegraphics[width=.4\linewidth]{image1}
-
-\begin {tikzpicture}[auto ,node distance =4 cm and 5cm ,on grid ,
-semithick ,
-state/.style ={ circle ,top color =white , bottom color = processblue!20 ,
-draw,black , text=black , minimum width =1 cm}]
-\node[state] (C){$A$};
-\node[state] (A) [above =of C] {$D$};
-\node[state] (B) [above right =of C] {$C$};
-\node[state] (D) [right =of C] {$B$};
-\path (C) edge node[below] {$1$} (D);
-\path (B) edge node[right] {$5$} (D);
-\path (A) edge node[above] {$10$} (B);
-\path (C) edge node[left] {$4$} (A);
-\end{tikzpicture}
-
-  \caption{The original graph $G$}
-  \label{fig:sub1}
-\end{subfigure}%
-\begin{subfigure}{.5\textwidth}
-  \centering
-%   \includegraphics[width=.4\linewidth]{image1}
-
-\onslide<2->{
-\begin{circuitikz}[american]
- \put(0,0){0};
- \draw (0, -2) to[short, -*, i=$1 A$] (0,0) node[left]{$A$};
- \draw (0,0) to[R, l=\mbox{$1 \  \Omega$}] (3,0) node[right]{$B$};
- \draw (0,0) to[R, l=$0.25 \ \Omega$] (0,3) node[left]{$D$};
- \draw (3,0) to[R, l=\mbox{$0.2 \ \Omega$}] (3,3) node[right]{$C$};
- % this works, but it has wrong spacing
- \draw (0,3) to[R, l=$0.1 \ \Omega$] (3,3);
- \draw (3, 0) to[short, *-, i=$1 A$] (3,-2);
- \draw (3, -2) to[isource, l=$1 A$] (0, -2);
- \end{circuitikz}
-
-\caption{The electric network version of $G$}
-}
-\label{fig:sub2}
-\end{subfigure}
-\caption{An example of a graph and it's corresponding electric network}
-\label{fig:test}
-\end{figure}
-
-\end{frame}
-
-%------------------------------------------------
 
 
 % white!50!red
@@ -1085,7 +946,7 @@ draw,black , text=black , minimum width =1 cm}]
 
 \begin{frame}
 \frametitle{References}
- \bibliographystyle{amsalpha}
+%  \bibliographystyle{amsalpha}
 \bibliography{/home/bhishma/Documents/code/masters-thesis/thesis/example.bib}
 \end{frame}
 
